[project]
name = "smazat3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.12.3",
    "certifi==2024.12.14",
    "charset-normalizer==3.4.0",
    "idna==3.10",
    "lxml==5.3.0",
    "requests==2.32.3",
    "soupsieve==2.6",
    "urllib3==2.2.3",
]
